# coordinates-to-h3

./: .bumpversion.cfg  LICENSE  Makefile  README.md  config.ini  environment.yml  make.cmd  pyproject.toml
.github/workflows/: make-mkdocs.yml
arcgis/: README.md  coordinates-to-h3.aprx  coords_to_h3.pyt
config/: config.ini
docsrc/: mkdocs.yml
docsrc/mkdocs/: api.md  index.md
notebooks/: coordinates-to-h3.ipynb  notebook-template.ipynb
scripts/: make_data.py  make_pyt_archive.py
src/coords_to_h3/: __init__.py  __main__.py
src/coords_to_h3/utils/: logging_utils.py
testing/: test_coords_to_h3.py
