[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinates-to-h3"
version = "0.1.0"
authors = [
  { name="Joel McCune"},
]
description = "Convert coordinates to H3 indices."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "h3>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["coords_to_h3"]
